# GPU-Monitor

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GPU Broker.app  LICENSE  README.md  SECURITY.md  alembic.ini  design-qa.md  pyproject.toml
.github/workflows/: ci.yml
.superdesign/: design-system.md
.superdesign/init/: components.md  extractable-components.md  layouts.md  pages.md  routes.md  theme.md
configs/: inventory.yaml  request.example.yaml
desktop/: AppSupport.swift  GPU Broker.swift  Info.plist  OverviewDashboard.swift  build-macos-app.sh  build-windows-app.ps1  main.swift  windows_launcher.py
desktop/assets/: GPU Broker.icns  README.md
desktop/windows/: GPUBrokerWindows.spec
docs/: AGENT_MCP_policy.en.md  AGENT_MCP_zh.md  DESIGN_SYSTEM.md  IMPLEMENTATION_STATUS_zh.md
docs/archive/: IMPLEMENTATION_EVIDENCE_2026-07-19.md
migrations/versions/: 20260719_0001_initial.py  20260719_0002_telemetry_current.py
scripts/: install_agent_policy.py
src/gpu_broker/: __init__.py  api.py  cli.py  client.py  collector.py  config.py  database.py  importer.py  mcp_server.py  models.py  schemas.py  service.py  timeutil.py
src/gpu_broker/migrations/: __init__.py  env.py
src/gpu_broker/migrations/versions/: 20260719_0001_initial.py  20260719_0003_endpoint_host_telemetry.py  20260719_0004_workload_profiles.py  20260719_0005_auto_activate_requests.py  __init__.py
src/gpu_broker/web/static/: app.css  app.js
src/gpu_broker/web/templates/: base.html  dashboard.html  login.html  page.html  token_created.html
tests/: __init__.py  conftest.py  helpers.py  test_agent_policy.py  test_api_gui_mcp.py  test_client.py  test_collector_importer.py  test_migration.py  test_package_layout.py  test_service.py  test_windows_launcher.py
